updates on paper 2

--- a/Regressions_Paper2.Rmd
+++ b/Regressions_Paper2.Rmd
@@ -241,6 +241,27 @@ ind_coop <- ind_coop %>%
 ind_coop <- ind_coop %>% 
   left_join(agreements)
 
+## correct fishing_children:
+
+ind_coop <- ind_coop %>%
+  mutate(
+    fishing_children = ifelse(
+      is.na(fishing_children), 0,
+      ifelse(
+        (fishing_children < 2 | fishing_children == 4), 0, 1
+        )
+    )
+  ) 
+
+
+
+surv %>%
+  select(grop_fishing_partner = 21, fishing_group = 52, art = 64, fishing_future=88, 
+         same_spp = 92, dramatic_changes = 96, share_art = 137, coop = 139) %>%
+  mutate(art = as.character(art)) %>%
+  skimr::skim()
+  pull(coop) %>% unique()
+
 ```
 
 ## OLS
@@ -279,7 +300,7 @@ ols_robust_cluster <- lm_robust(
 ```
 
 
-```{r fig1, fig.height= 2, fig.width= 6, include = TRUE, echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap = 'Comparison of linear models. (A) individual extraction and (B) proportion of stock available as response variable. SE estimation using HC1 (Stata default) and are clustered around groups.', fig.pos = "h", out.extra= ''}
+```{r fig1, fig.height= 3, fig.width= 6, include = TRUE, echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap = 'Comparison of linear models. (A) individual extraction and (B) proportion of stock available as response variable. SE estimation using HC1 (Stata default) and are clustered around groups.', fig.pos = "h"}
 df1 <- tidy(ols) %>% mutate(model = "ols")
 df2 <- tidy(ols_robust) %>% mutate(model = "ols robust")
 df3 <- tidy(ols_robust_cluster) %>% mutate(model = "ols robust \n cluster SE")
@@ -702,69 +723,69 @@ diff_df3 <- diff_df3 %>%
 
 ### See first the tables
 
-stargazer::stargazer(
-  diff_df %>% as.data.frame(), 
-  type = "latex", header = FALSE, summary = FALSE, #float = FALSE,
-  digits = 2, title = "Diff-in-diff table for individual extraction")
-
-stargazer::stargazer(
-  diff_df2 %>% as.data.frame(),
-  type = "latex", header = FALSE, summary = FALSE, #float = FALSE,
-  digits = 2, title = "Diff-in-diff table for proportion of stock")
-
-stargazer::stargazer(
-  diff_df3 %>% as.data.frame(),
-  type = "latex", header = FALSE, summary = FALSE, #float = FALSE,
-  digits = 2, title = "Diff-in-diff table for cooperation")
-
-```
-
-
-
-```{r fig3, include = TRUE, echo = FALSE, fig.height= 2, fig.width=5, fig.cap = "Difference-in-difference comparison for control and treated groups for (A) individual extraction as number of fish, (B) as proportion of available stock size, and (C) cooperation.", fig.pos = "H", out.extra= '', fig.align='center'}
-
-
-## Visualization based on model
-g1 <- diff_df[1:4,] %>% select(1:3) %>%
-  gather(key = time, value = estimate, before, after) %>%
-  mutate(time = as_factor(time)) %>%
-  ggplot(aes(time, estimate)) +
-  geom_point(aes(color = treatment)) +
-  geom_line(aes(group = treatment, color = treatment)) + 
-  labs(tag = "A") +
-  theme_light(base_size = 8) + theme( legend.position = "right")
-
-
-## Visualization based on model
-g2 <- diff_df2[1:4,] %>% select(1:3) %>%
-  gather(key = time, value = estimate, before, after) %>%
-  mutate(time = as_factor(time)) %>%
-  ggplot(aes(time, estimate)) +
-  geom_point(aes(color = treatment)) +
-  geom_line(aes(group = treatment, color = treatment)) +
-  labs(tag = "B") +
-  theme_light(base_size = 8) + theme( legend.position = "right")
-
-## Visualization based on model
-g3 <- diff_df3[1:4,] %>% select(1:3) %>%
-  gather(key = time, value = estimate, before, after) %>%
-  mutate(time = as_factor(time)) %>%
-  ggplot(aes(time, estimate)) +
-  geom_point(aes(color = treatment)) +
-  geom_line(aes(group = treatment, color = treatment)) +
-  labs(tag = "C") +
-  theme_light(base_size = 8) + theme( legend.position = "right")
-
-
-source('~/Dropbox/Code/multiplot.R')
-g <- list (g1,g2, g3)
-
-layout <- matrix(c(1:3), ncol = 3, nrow = 1, byrow = T)
-multiplot(plotlist = g, layout = layout)
+# stargazer::stargazer(
+#   diff_df %>% as.data.frame(), 
+#   type = "latex", header = FALSE, summary = FALSE, float = TRUE,
+#   digits = 2, title = "Diff-in-diff table for individual extraction")
+# 
+# stargazer::stargazer(
+#   diff_df2 %>% as.data.frame(),
+#   type = "latex", header = FALSE, summary = FALSE, float = TRUE,
+#   digits = 2, title = "Diff-in-diff table for proportion of stock")
+# 
+# stargazer::stargazer(
+#   diff_df3 %>% as.data.frame(),
+#   type = "latex", header = FALSE, summary = FALSE, float =TRUE,
+#   digits = 2, title = "Diff-in-diff table for cooperation")
 
 ```
 
-```{r alternative_for_paper, include = TRUE, echo = FALSE}
+
+
+```{r fig3, include = TRUE, echo = FALSE, fig.height= 3, fig.width=6, fig.cap = "Difference-in-difference comparison for control and treated groups for (A) individual extraction as number of fish, (B) as proportion of available stock size, and (C) cooperation.", fig.pos = "H", out.extra= '', fig.align='center'}
+
+
+# ## Visualization based on model
+# g1 <- diff_df[1:4,] %>% select(1:3) %>%
+#   gather(key = time, value = estimate, before, after) %>%
+#   mutate(time = as_factor(time)) %>%
+#   ggplot(aes(time, estimate)) +
+#   geom_point(aes(color = treatment), show.legend = FALSE) +
+#   geom_line(aes(group = treatment, color = treatment)) + 
+#   labs(tag = "A") +
+#   theme_light(base_size = 6) + theme( legend.position = "right")
+# 
+# 
+# ## Visualization based on model
+# g2 <- diff_df2[1:4,] %>% select(1:3) %>%
+#   gather(key = time, value = estimate, before, after) %>%
+#   mutate(time = as_factor(time)) %>%
+#   ggplot(aes(time, estimate)) +
+#   geom_point(aes(color = treatment)) +
+#   geom_line(aes(group = treatment, color = treatment)) +
+#   labs(tag = "B") +
+#   theme_light(base_size = 6) + theme( legend.position = "bottom")
+# 
+# ## Visualization based on model
+# g3 <- diff_df3[1:4,] %>% select(1:3) %>%
+#   gather(key = time, value = estimate, before, after) %>%
+#   mutate(time = as_factor(time)) %>%
+#   ggplot(aes(time, estimate)) +
+#   geom_point(aes(color = treatment), show.legend = FALSE) +
+#   geom_line(aes(group = treatment, color = treatment)) +
+#   labs(tag = "C") +
+#   theme_light(base_size = 6) + theme( legend.position = "right")
+# 
+
+# source('~/Dropbox/Code/multiplot.R')
+# g <- list (g1,g2, g3)
+# 
+# layout <- matrix(c(1:3), ncol = 3, nrow = 1, byrow = T)
+# multiplot(plotlist = g, layout = layout)
+
+```
+
+```{r alternative, include = TRUE, echo = FALSE, fig.height= 4, fig.width=6, fig.cap = "Difference-in-difference comparison for control and treated groups for (A) individual extraction as number of fish, (B) as proportion of available stock size, and (C) cooperation.", fig.pos = "h", out.extra= '', fig.align='center', warning=FALSE, message=FALSE}
 
 
 diff_df$response <- "individual extraction"
@@ -803,9 +824,9 @@ diff_df3 <- diff_df3 %>%
   
   
 diff_df4 <- bind_rows(
-  diff_df, diff_df2, diff_df3
-) %>%
-  mutate(response = as_factor(response, order = c(2,3,1)))
+  diff_df, diff_df2, diff_df3) %>%
+  mutate(response = as_factor(response),
+         response = fct_relevel(response, "individual extraction", "proportion stock", "cooperation")) # j190929: this stopped working, the ordering of factors
 
 g_diff <- diff_df4  %>% 
   ggplot(aes(time, estimate, group = type)) +
@@ -815,7 +836,7 @@ g_diff <- diff_df4  %>%
   theme_light(base_size = 6) + theme(legend.position = "bottom") +
   labs()
 
-# ggsave(g_diff, filename = "diff-in-diff.pdf", device = "pdf", width = 3, height = 3, units = "in", dpi = 600 )
+# ggsave(g_diff, filename = "diff-in-diff.png", device = "png", width = 4, height = 4, units = "in", dpi = 600 )
 
 g_diff
 ```
@@ -972,12 +993,19 @@ I will then go with `p4` and `q4` or models 6 and 10 in the long tables (6 and 7
 ```{r fig5, include = TRUE, echo = FALSE, fig.height=4, fig.width=4, fig.align='center', warning=FALSE, message=FALSE, dev.args= list(pointsize = 6), fig.cap = "Correlations between response variables"}
 
 pm <- GGally::ggpairs(
-  data = ind_coop %>% filter(part == TRUE),
+  data = ind_coop %>% filter(part == TRUE) %>%
+    rename(
+      `mean extraction` = mean_extraction,
+      `mean % extraction` = mean_prop_extr,
+      `variance extraction` = var_extraction,
+      `variance % extraction` = var_prop_extr,
+      `median cooperation` = med_coop
+    ),
   columns = c(3:6,14,52),
-  aes(color = Treatment, fill = Treatment, alpha = 0.5),
+  aes(color = Treatment, fill = Treatment),
   upper = list(continuous = wrap("cor", size = 2, alignPercent = 0.95, hjust = 0.1)),
-  diag = list(continuous = wrap("densityDiag", size =0.4)),
-  lower = list(continuous = wrap("points", size = 1.5))
+  diag = list(continuous = wrap("densityDiag", size =0.4, alpha = 0.25)),
+  lower = list(continuous = wrap("points", size = 0.5))
   )
 
 pm <- pm + theme_light(base_size = 6) + theme(legend.position = "bottom")
@@ -991,6 +1019,34 @@ pm
 # quartz.save(file = "correlations.pdf", type = "pdf", width = 5, height = 5, pointsize = 6, dpi = 600)
 ```
 
+```{r correlations_reg, include = TRUE, echo = FALSE, fig.height=4, fig.width=4, fig.align='center', warning=FALSE, message=FALSE, dev.args= list(pointsize = 6), fig.cap = "Correlations between explanatory variables"}
+pm2 <- GGally::ggpairs(
+  data = ind_coop %>% filter(part == TRUE) %>%
+    rename(
+      `Education [years]` = education_yr,
+      `Risk aversion` = Risk,
+      `Ambiguity aversion` = Amb,
+      `Proportion of agreements` = prop_ag,
+      `How often do you have bad days?` = BD_how_often,
+      `Expect children to fish` = fishing_children
+    ),
+  columns = c(8, 37, 44, 48, 53,54, 57,58),
+  aes(color = Place, fill = Place),
+  upper = list(continuous = wrap("cor", size = 1, alignPercent = 0.95, hjust = 0.1)),
+  diag = list(continuous = wrap("densityDiag", size =0.4, alpha = 0.25)),
+  lower = list(continuous = wrap("points", size = 0.5))
+  )
+
+pm2 <- pm2 + theme_light(base_size = 5) + theme(legend.position = "bottom")
+
+# ggsave(pm2, filename = "correlations2.pdf", device = "pdf", width = 5, height = 5, units = "in", dpi = 600 )
+
+pm2
+
+# quartz(width = 5, height = 5, pointsize = 6)
+# 
+# quartz.save(file = "correlations2.pdf", type = "pdf", width = 5, height = 5, pointsize = 6, dpi = 600)
+```
 
 
 
@@ -1020,7 +1076,7 @@ pm
 
 ```{r regression_survey, include = TRUE, echo = FALSE, message=FALSE, warning=FALSE}
 y_vars <- c("mean_extraction", "mean_prop_extr", "med_coop", "variance", "coordination", "var_extraction", "var_prop_extr")
-x_vars <- "Treatment + age + education_yr + BD_how_often + fishing_children  + Risk + Amb + Place + prop_ag"
+x_vars <- "Treatment + age + education_yr + BD_how_often + fishing_children  + Risk + Amb  + prop_ag"
 out <-  map2(x_vars, y_vars, 
          ~ lm_robust(as.formula(paste(.y, "~", .x)),
               data = ind_coop %>% filter(part == T) %>% ungroup(),
@@ -1035,23 +1091,69 @@ out <-  map2(x_vars, y_vars,
 g_reg2 <- out %>%
   map(tidy) %>%
   map2(., .y = y_vars , function(x,y) {x$model <- y; return(x)}) %>%
-  bind_rows() %>%
+  bind_rows() %>% #pull(model) %>% unique()
+  mutate( # correct the names of terms
+    term = str_replace_all(string = term, pattern = "\\(Intercept\\)", replacement = "Intercept"),
+    term = str_replace_all(string = term, pattern = "age", replacement = "Age [years]"),
+    term = str_replace_all(string = term, pattern = "education_yr", replacement = "Education [years]"),
+    term = str_replace_all(string = term, pattern = "BD_how_often",
+                           replacement = "How often do you have bad days?\n [1:yearly - 4:daily]"),
+    term = str_replace_all(term, "^Risk", "Risk aversion"),
+    term = str_replace_all(term, "Amb", "Ambiguity aversion"),
+    term = str_replace_all(term, "prop_ag", "% rounds with agreements"),
+    term = str_replace_all(term, "fishing_children", "Do you expect your children to fish?\n[0:No, 1:Yes]") 
+    ## correct on data and regressions
+  ) %>%
+  mutate(
+    model = str_replace_all(model, "mean_extraction", "mean extraction"),
+    model = str_replace_all(model, "mean_prop_extr", "mean %\n extraction"),
+    model = str_replace_all(model, "med_coop", "median\n cooperation"),
+    model = str_replace_all(model, "variance", "variance\n cooperation"),
+    model = str_replace_all(model, "var_extraction", "variance\n extraction"),
+    model = str_replace_all(model, "var_prop_extr", "variance %\n extraction"),
+    model = factor(model, levels = 
+                     c("mean extraction", "mean %\n extraction", "variance\n extraction", "variance %\n extraction",
+                      "median\n cooperation", "variance\n cooperation", "coordination"))
+  ) %>%
+  mutate(
+    var_type = ifelse(
+      str_detect(term, "Treatment"), "Treatment",
+      ifelse(
+        str_detect(term, "Place"), "Place",
+             ifelse(
+               str_detect(term, "Intercept"), ".", "Socio-economic aspects")))
+  ) %>% # pull(var_type) %>% unique()
+  mutate(
+    term = str_remove(term, "Treatment"),
+    term = str_remove(term, "Place"),
+    var_type = factor(var_type, levels = c("." ,"Treatment", "Place", "Socio-economic aspects") )
+  ) %>%
+  
   mutate(term = factor(term, levels = rev(unique(term)))) %>%
+  mutate(conf.high = estimate + std.error,
+         conf.low = estimate - std.error,) %>%
   ggplot(aes(x = estimate, y = term)) +
   geom_vline(xintercept = 0, color = "grey84", linetype = 2, size = 0.5) +
     geom_point(aes(shape = ifelse(
         p.value < 0.05, "< 0.05" ,
             ifelse(p.value < 0.1, "< 0.1", "> 0.1")
-        )), size = 3, show.legend = TRUE) +
+        )), size = 2, show.legend = TRUE) +
     scale_shape_manual(name = "p value", values = c(19,7,1)) +
     geom_errorbarh(aes(xmin = conf.low, xmax = conf.high, height = .25), size = 0.3) +
-  facet_grid(. ~ model, scales = "free_x") +
-  theme_light(base_size = 8) + theme(legend.position = "bottom") 
+  scale_x_continuous(minor_breaks = NULL, breaks = scales::pretty_breaks(n=3)) +
+  theme_light(base_size = 7) + 
+  theme(legend.position = "bottom", axis.title.y = element_blank(), axis.text.x = element_text(size = 5) ) +
+  facet_grid(var_type ~ model, scales = "free", switch = "y", space = "free_y") 
   #ggtitle("What does explain the behaviour of individuals?") #subtitle = "Robust estimation with standard errors HC1 (aka. Stata) and clustered around groups"
 
 
-# ggsave(g_reg2, filename = "regression_cooperation.png", device = "png", width = 6, height = 4, units = "in", dpi = 300 )
+# ggsave(g_reg2, filename = "fig3_regression_cooperation.png", device = "png", width = 6, height = 4, units = "in", dpi = 600 )
 g_reg2
+
+# quartz(width = 6, height = 4, pointsize = 6)
+# g_reg2
+# quartz.save(file = "fig3_regression_cooperation.pdf", type = "pdf", width = 6, height = 4, pointsize = 6, dpi = 600, bg = "white")
+
 ```
 
 
@@ -1077,9 +1179,9 @@ stargazer::stargazer(
 
 ```
 
-Figure 2:
+### Figure 2:
 
-```{r fig2, include = TRUE, echo = FALSE, fig.height=7, fig.width=7, fig.align='center', warning=FALSE, message=FALSE, dev.args= list(pointsize = 8), fig.cap = "What drives the behavior of individuals."}
+```{r fig2, include = TRUE, echo = FALSE, fig.height=6, fig.width=7, fig.align='center', warning=FALSE, message=FALSE, dev.args= list(pointsize = 8), fig.cap = "What drives the behavior of individuals."}
 
 # ind_coop %>% ungroup() %>%
 #   filter(part == TRUE) %>%
@@ -1093,38 +1195,42 @@ Figure 2:
 
 g1 <- ind_coop %>% ungroup() %>%
   filter(part == TRUE) %>%
-  select(Treatment, med_coop, coordination) %>%
+  dplyr::select(Treatment, med_coop, coordination) %>%
   ggplot(aes(coordination)) + 
   geom_density(aes(color = Treatment, fill = Treatment), 
                alpha = 0.4, 
                show.legend = FALSE) + 
   geom_rug(aes(color = Treatment), 
                alpha = 0.4, sides = "r",
-               show.legend = FALSE) +
-  coord_flip() + scale_y_reverse() +
-  theme_light(base_size = 8)
+               show.legend = FALSE,
+           length = unit(0.05, "npc")) +
+  xlab("") + ylab("") + scale_x_continuous(position = "top") +
+  coord_flip() + scale_y_reverse() + labs(tag = "A") +
+  theme_light(base_size = 8) + theme(axis.title.y = element_blank())
 
 g3 <- ind_coop %>% ungroup() %>%
   filter(part == TRUE) %>%
-  select(Treatment, med_coop, coordination) %>%
+  dplyr::select(Treatment, med_coop, coordination) %>%
   ggplot(aes(med_coop)) + 
   geom_density(aes(color = Treatment, fill = Treatment), 
                alpha = 0.4, 
                show.legend = FALSE) + 
   geom_rug(aes(color = Treatment), 
                alpha = 0.4, sides = "t",
-               show.legend = FALSE) +
+               show.legend = FALSE,
+           length = unit(0.05, "npc")) +
+  xlab("") + ylab("") + scale_x_continuous(position = "top") +
   scale_y_reverse() +
-  theme_light(base_size = 8)
+  theme_light(base_size = 8) + theme(axis.title.x = element_blank())
 
 g2 <- ind_coop %>% ungroup() %>%
   filter(part == TRUE) %>%
-  select(Treatment, med_coop, coordination) %>%
+  dplyr::select(Treatment, med_coop, coordination) %>%
   ggplot(aes( med_coop, coordination)) + 
   # geom_rect(aes(xmin = 0, xmax = max(coordination)+0.1, ymin = 0, ymax = 1),
   #           fill = "skyblue", alpha = , color = "skyblue") +
   geom_vline(xintercept = 1, color = "orange") +
-  geom_point(aes(color = Treatment), size = 0.5, 
+  geom_point(aes(color = Treatment), size = 1, 
                alpha = 0.7, 
                show.legend = FALSE) + 
   geom_text(
@@ -1134,15 +1240,16 @@ g2 <- ind_coop %>% ungroup() %>%
       text = c("cooperators", "defectors"),
       color = c("blue", "red")),
     aes(x = x,y = y,label = text),
-    color = c("blue", "red"), size = 2.5,
-    show.legend = FALSE) +
+    color = c("blue", "red"), size = 3,
+    show.legend = FALSE) + 
+  xlab("median cooperation") + 
   theme_light(base_size = 8)
 
 library(ggpubr)
 
 leg <- ind_coop %>% ungroup() %>%
   filter(part == TRUE) %>%
-  select(Treatment, med_coop, coordination) %>%
+  dplyr::select(Treatment, med_coop, coordination) %>%
   ggplot(aes(med_coop)) + 
   geom_density(aes(color = Treatment, fill = Treatment), 
                alpha = 0.4, 
@@ -1150,8 +1257,9 @@ leg <- ind_coop %>% ungroup() %>%
   geom_rug(aes(color = Treatment), 
                alpha = 0.4, sides = "r",
                show.legend = TRUE) +
-  coord_flip() + scale_y_reverse() +
-  theme_light(base_size = 8)
+  coord_flip() + scale_y_reverse() + 
+  theme_light(base_size = 8) +
+  theme(legend.position = "bottom")
 
 legend <- leg %>%
   get_legend() %>%
@@ -1159,7 +1267,7 @@ legend <- leg %>%
 
 g5 <- ind_coop %>% ungroup() %>%
   filter(part == TRUE) %>%
-  select(Treatment, mean_extraction, mean_prop_extr, var_extraction, var_prop_extr) %>%
+  dplyr::select(Treatment, mean_prop_extr) %>%
   ggplot(aes(mean_prop_extr)) + 
   geom_density(aes(color = Treatment, fill = Treatment), 
                alpha = 0.4, 
@@ -1167,12 +1275,13 @@ g5 <- ind_coop %>% ungroup() %>%
   geom_rug(aes(color = Treatment), 
                alpha = 0.4, sides = "r",
                show.legend = FALSE) +
-  coord_flip() + scale_y_reverse() +
-  theme_light(base_size = 8)
+  xlab("") + ylab("") + scale_x_continuous(position = "top") + #xlab("mean % extraction") +
+  coord_flip() + scale_y_reverse() + labs(tag = "B") +
+  theme_light(base_size = 8) + theme(axis.title.y = element_blank())
 
 g6 <- ind_coop %>% ungroup() %>%
   filter(part == TRUE) %>%
-  select(Treatment, mean_extraction, mean_prop_extr, var_extraction, var_prop_extr) %>%
+  dplyr::select(Treatment, mean_extraction) %>%
   ggplot(aes(mean_extraction)) + 
   geom_density(aes(color = Treatment, fill = Treatment), 
                alpha = 0.4, 
@@ -1180,31 +1289,222 @@ g6 <- ind_coop %>% ungroup() %>%
   geom_rug(aes(color = Treatment), 
                alpha = 0.4, sides = "t",
                show.legend = FALSE) +
+  xlab("") + ylab("") + scale_x_continuous(position = "top") + #xlab("mean extraction") +
   scale_y_reverse() +
-  theme_light(base_size = 8)
+  theme_light(base_size = 8) + theme(axis.title.x = element_blank())
 
 g7 <- ind_coop %>% ungroup() %>%
   filter(part == TRUE) %>%
-  select(Treatment, mean_extraction, mean_prop_extr, var_extraction, var_prop_extr) %>%
+  dplyr::select(Treatment, mean_extraction, mean_prop_extr) %>%
   ggplot(aes( mean_extraction, mean_prop_extr)) + 
-  geom_point(aes(color = Treatment), size = 0.5, 
+  geom_point(aes(color = Treatment), size = 1, 
                alpha = 0.7, 
                show.legend = FALSE) + 
-  theme_light(base_size = 8)
+  xlab("mean extraction") + ylab("mean % extraction") +
+  theme_light(base_size = 7)
+
+g8 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Treatment, var_extraction, var_prop_extr) %>%
+  ggplot(aes( var_extraction, var_prop_extr)) + 
+  geom_point(aes(color = Treatment), size = 1, 
+               alpha = 0.7, 
+               show.legend = FALSE) + 
+  xlab("variance extraction") + ylab("variance % extraction") +
+  theme_light(base_size = 7)
+
+g9 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Treatment, variance, coordination) %>%
+  ggplot(aes( variance, coordination)) + 
+  geom_point(aes(color = Treatment), size = 1, 
+               alpha = 0.7, 
+               show.legend = FALSE) + 
+  xlab("variance cooperation") + ylab("coordination") +
+  theme_light(base_size = 7)
 
 source('~/Dropbox/Code/multiplot.R')
 
-g <- list(g1, g2, g5, g7, legend, g3,  legend, g6, g_reg2)
+#g <- list(g1, g2, g5, g7, legend, g3,  legend, g6, g_reg2)
+g <- list(g1, g2, g5, g7, g9, g3, g8, g6, legend)
+layout <- matrix(data = c(1,2,2,3,4,4,
+                          1,2,2,3,4,4,
+                          5,6,6,7,8,8,
+                          9,9,9,9,9,9),
+                 nrow = 4, ncol = 6, byrow = TRUE)
 
 
+# quartz(width = 7, height = 6, pointsize = 8)
+# multiplot(plotlist = g, layout = matrix(c(1:8, rep(9,8)), 4,4, byrow = TRUE))
+multiplot(plotlist = g, layout = layout)
+# quartz.save(file="fig2_response_variables.png", type = "png", width = 7, height = 6, pointsize = 8, dpi = 600, bg= "white")
 
-# quartz(width = 7, height = 7, pointsize = 8)
-multiplot(plotlist = g, layout = matrix(c(1:8, rep(9,8)), 4,4, byrow = TRUE))
-# quartz.save(file="fig2_model.pdf", type = "pdf", width = 7, height = 7, pointsize = 8, dpi = 600)
+# ggsave( filename = "fig2_model.png", device = "png", width = 7, height = 7, units = "in", dpi = 600 )
 
 ```
 
 
+```{r fig2_place, include = TRUE, echo = FALSE, fig.height=6, fig.width=7, fig.align='center', warning=FALSE, message=FALSE, dev.args= list(pointsize = 8), fig.cap = "What drives the behavior of individuals."}
+
+# ind_coop %>% ungroup() %>%
+#   filter(part == TRUE) %>%
+#   select(Treatment, med_coop, coordination) %>%
+#   ggpairs(columns = c(2,3),
+#     aes(color = Treatment, alpha = 0.5),
+#     upper = list(continuous = wrap("points", size = 0.5, alpha = 0.7)),
+#   lower = list(continuous = wrap("cor", size = 3, alignPercent = 1, hjust = 0))
+#   )
+
+
+g1 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Place, med_coop, coordination) %>%
+  ggplot(aes(coordination)) + 
+  geom_density(aes(color = Place, fill = Place), 
+               alpha = 0.4, 
+               show.legend = FALSE) + 
+  geom_rug(aes(color = Place), 
+               alpha = 0.4, sides = "r",
+               show.legend = FALSE,
+           length = unit(0.05, "npc")) +
+  xlab("") + ylab("") + scale_x_continuous(position = "top") +
+  coord_flip() + scale_y_reverse() + labs(tag = "A") +
+  theme_light(base_size = 8) + theme(axis.title.y = element_blank())
+
+g3 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Place, med_coop, coordination) %>%
+  ggplot(aes(med_coop)) + 
+  geom_density(aes(color = Place, fill = Place), 
+               alpha = 0.4, 
+               show.legend = FALSE) + 
+  geom_rug(aes(color = Place), 
+               alpha = 0.4, sides = "t",
+               show.legend = FALSE,
+           length = unit(0.05, "npc")) +
+  xlab("") + ylab("") + scale_x_continuous(position = "top") +
+  scale_y_reverse() +
+  theme_light(base_size = 8) + theme(axis.title.x = element_blank())
+
+g2 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Place, med_coop, coordination) %>%
+  ggplot(aes( med_coop, coordination)) + 
+  # geom_rect(aes(xmin = 0, xmax = max(coordination)+0.1, ymin = 0, ymax = 1),
+  #           fill = "skyblue", alpha = , color = "skyblue") +
+  geom_vline(xintercept = 1, color = "orange") +
+  geom_point(aes(color = Place), size = 1, 
+               alpha = 0.7, 
+               show.legend = FALSE) + 
+  geom_text(
+    data = data.frame(
+      x = c(0.5, 1.5),
+      y = c(.2, .2), 
+      text = c("cooperators", "defectors"),
+      color = c("blue", "red")),
+    aes(x = x,y = y,label = text),
+    color = c("blue", "red"), size = 3,
+    show.legend = FALSE) + 
+  xlab("median cooperation") + 
+  theme_light(base_size = 8)
+
+library(ggpubr)
+
+leg <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Place, med_coop, coordination) %>%
+  ggplot(aes(med_coop)) + 
+  geom_density(aes(color = Place, fill = Place), 
+               alpha = 0.4, 
+               show.legend = TRUE) + 
+  geom_rug(aes(color = Place), 
+               alpha = 0.4, sides = "r",
+               show.legend = TRUE) +
+  coord_flip() + scale_y_reverse() + 
+  theme_light(base_size = 8) +
+  theme(legend.position = "bottom")
+
+legend <- leg %>%
+  get_legend() %>%
+  as_ggplot()
+
+g5 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Place, mean_prop_extr) %>%
+  ggplot(aes(mean_prop_extr)) + 
+  geom_density(aes(color = Place, fill = Place), 
+               alpha = 0.4, 
+               show.legend = FALSE) + 
+  geom_rug(aes(color = Place), 
+               alpha = 0.4, sides = "r",
+               show.legend = FALSE) +
+  xlab("") + ylab("") + scale_x_continuous(position = "top") + #xlab("mean % extraction") +
+  coord_flip() + scale_y_reverse() + labs(tag = "B") +
+  theme_light(base_size = 8) + theme(axis.title.y = element_blank())
+
+g6 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Place, mean_extraction) %>%
+  ggplot(aes(mean_extraction)) + 
+  geom_density(aes(color = Place, fill = Place), 
+               alpha = 0.4, 
+               show.legend = FALSE) + 
+  geom_rug(aes(color = Place), 
+               alpha = 0.4, sides = "t",
+               show.legend = FALSE) +
+  xlab("") + ylab("") + scale_x_continuous(position = "top") + #xlab("mean extraction") +
+  scale_y_reverse() +
+  theme_light(base_size = 8) + theme(axis.title.x = element_blank())
+
+g7 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Place, mean_extraction, mean_prop_extr) %>%
+  ggplot(aes( mean_extraction, mean_prop_extr)) + 
+  geom_point(aes(color = Place), size = 1, 
+               alpha = 0.7, 
+               show.legend = FALSE) + 
+  xlab("mean extraction") + ylab("mean % extraction") +
+  theme_light(base_size = 7)
+
+g8 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Place, var_extraction, var_prop_extr) %>%
+  ggplot(aes( var_extraction, var_prop_extr)) + 
+  geom_point(aes(color = Place), size = 1, 
+               alpha = 0.7, 
+               show.legend = FALSE) + 
+  xlab("variance extraction") + ylab("variance % extraction") +
+  theme_light(base_size = 7)
+
+g9 <- ind_coop %>% ungroup() %>%
+  filter(part == TRUE) %>%
+  dplyr::select(Place, variance, coordination) %>%
+  ggplot(aes( variance, coordination)) + 
+  geom_point(aes(color = Place), size = 1, 
+               alpha = 0.7, 
+               show.legend = FALSE) + 
+  xlab("variance cooperation") + ylab("coordination") +
+  theme_light(base_size = 7)
+
+source('~/Dropbox/Code/multiplot.R')
+
+#g <- list(g1, g2, g5, g7, legend, g3,  legend, g6, g_reg2)
+g <- list(g1, g2, g5, g7, g9, g3, g8, g6, legend)
+layout <- matrix(data = c(1,2,2,3,4,4,
+                          1,2,2,3,4,4,
+                          5,6,6,7,8,8,
+                          9,9,9,9,9,9),
+                 nrow = 4, ncol = 6, byrow = TRUE)
+
+
+# quartz(width = 7, height = 6, pointsize = 8)
+# multiplot(plotlist = g, layout = matrix(c(1:8, rep(9,8)), 4,4, byrow = TRUE))
+multiplot(plotlist = g, layout = layout)
+# quartz.save(file="fig2_response_variables.png", type = "png", width = 7, height = 6, pointsize = 8, dpi = 600, bg= "white")
+
+# ggsave( filename = "fig2_model.png", device = "png", width = 7, height = 7, units = "in", dpi = 600 )
+
+```
 
 
 
@@ -1342,7 +1642,7 @@ It checks for stochastic trends, the null hypothesis is that the series as a uni
 panel.set <- plm.data (dat %>% filter(part == T) , index = c('ID_player' ,'Round') ) 
 library(tseries)
 adf.test (panel.set$ind_extraction, k=2)
-adf.test (panel.set$prop, k=2)
+# adf.test (panel.set$prop, k=2)
 ```
 
 
